--- a/infra/terraform/terraform.tfvars.sample
+++ b/infra/terraform/terraform.tfvars.sample
@@ -1,8 +1,11 @@
 # Cloud provider (only AWS supported for now)
 cloud_provider = "aws"
 
+# AWS region
+aws_region = "us-east-1"
+
 # Networking
-vpc_cidr_block = "10.0.0.0/16"
+vpc_cidr_block     = "10.0.0.0/16"
 public_subnet_cidr = "10.0.1.0/24"
 private_subnet_cidr = "10.0.2.0/24"
 
@@ -15,3 +18,14 @@ app_branch = "main"
 # Instance settings
 instance_type = "t3.micro"
 instance_count = 1
+
+# S3 bucket and artifact keys
+s3_bucket_name = "fleetcore-artifacts"   # change if needed
+jar_s3_key     = "artifacts/FleetCoreServer.jar"
+lambda_s3_key  = "lambda/mission_end.zip"
+
+# RDS settings
+rds_db_name   = "fleetcore"
+rds_username  = "fleetcore"
+# Set your password in a separate terraform.tfvars (or via GH secret)
+# rds_password = "YOUR_PASSWORD_HERE"
