--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -148,8 +148,12 @@ jobs:
 
       - name: Build FleetCoreLib locally
         run: |
-          mvn -f libs/FleetCoreLib/pom.xml clean install -DskipTests
-
+          mvn -f libs/FleetCoreLib/pom.xml \
+            clean install -DskipTests \
+            -Dmaven.compiler.release=21 \
+            -Dmaven.compiler.source=21 \
+            -Dmaven.compiler.target=21 \
+            -Dmaven.compiler.plugin.version=3.14.0
       - name: Checkout FleetCoreServer
         uses: actions/checkout@v4
         with:
