--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -145,6 +145,11 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y maven openjdk-21-jdk
+      
+      - name: Print versions
+        run: |
+          mvn -version
+          java -version
 
       - name: Build FleetCoreLib locally
         run: |
