--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,27 +31,6 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Prepare tfvars
-        working-directory: ${{ env.TF_DIR }}
-        run: |
-          cat > terraform.tfvars <<EOF
-          cloud_provider = "aws"
-          aws_region = "${{ secrets.AWS_REGION }}"
-          vpc_cidr_block = "10.0.0.0/16"
-          public_subnet_cidr = "10.0.1.0/24"
-          private_subnet_cidr = "10.0.2.0/24"
-          ssh_key_name = "fleetcore_key"
-          app_branch = "main"
-          instance_type = "t3.micro"
-          instance_count = 1
-          s3_bucket_name = "fleetcore-artifacts"
-          jar_s3_key = "artifacts/FleetCoreServer.jar"
-          lambda_s3_key = "lambda/mission_end.zip"
-          rds_db_name = "fleetcore"
-          rds_username = "fleetcore"
-          rds_password = "${{ secrets.RDS_PASSWORD }}"
-          EOF
-
       - name: Terraform Init (no backend)
         working-directory: ${{ env.TF_DIR }}
         run: terraform init -backend=false
@@ -84,6 +63,8 @@ jobs:
     needs: [terraform-validate, ansible-validate]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Check required secrets (skip in testing)
         run: |
           echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID"
@@ -97,8 +78,6 @@ jobs:
               exit 1
             fi
           fi
-
-      - uses: actions/checkout@v4
 
       - name: Setup AWS CLI
         run: |
@@ -117,6 +96,27 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+
+      - name: Prepare terraform.tfvars
+        working-directory: ${{ env.TF_DIR }}
+        run: |
+          cat > terraform.tfvars <<EOF
+          cloud_provider = "aws"
+          aws_region = "${{ secrets.AWS_REGION }}"
+          vpc_cidr_block = "10.0.0.0/16"
+          public_subnet_cidr = "10.0.1.0/24"
+          private_subnet_cidr = "10.0.2.0/24"
+          ssh_key_name = "fleetcore_key"
+          app_branch = "main"
+          instance_type = "t3.micro"
+          instance_count = 1
+          s3_bucket_name = "fleetcore-artifacts"
+          jar_s3_key = "artifacts/FleetCoreServer.jar"
+          lambda_s3_key = "lambda/mission_end.zip"
+          rds_db_name = "fleetcore"
+          rds_username = "fleetcore"
+          rds_password = "${{ secrets.RDS_PASSWORD }}"
+          EOF
 
       - name: Terraform Init (with backend disabled for PRs)
         working-directory: ${{ env.TF_DIR }}
@@ -154,9 +154,8 @@ jobs:
           java -version
 
       - name: Build FleetCoreLib locally
-        run: |
-          mvn -f libs/FleetCoreLib/pom.xml clean install -DskipTests
-          
+        run: mvn -f libs/FleetCoreLib/pom.xml clean install -DskipTests
+
       - name: Checkout FleetCoreServer
         uses: actions/checkout@v4
         with:
@@ -165,8 +164,7 @@ jobs:
           path: FleetCoreServer
 
       - name: Build FleetCoreServer (jar)
-        run: |
-          mvn -f FleetCoreServer/pom.xml clean package -DskipTests
+        run: mvn -f FleetCoreServer/pom.xml clean package -DskipTests
 
       - name: Terraform Apply
         working-directory: ${{ env.TF_DIR }}
